# sysrepo-plugin-interfaces

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  CompileOptions.cmake  LICENSE  LogOptions.cmake  README.md  SECURITY.md
CMakeModules/: FindAUGYANG.cmake  (+10 more)
src/bridging/: CMakeLists.txt  bridge.c  bridge.h  bridge_netlink.c  bridge_netlink.h  bridging.c  bridging.h  common.c  common.h  context.h  ly_tree.c  ly_tree.h  main.c  plugin.c  plugin.h  startup.c  startup.h
src/bridging/bridge/: component.c  component.h  list.c  list.h  mac_address.h
src/bridging/bridge/component/: list.c  list.h
src/bridging/bridge/vlan/: list.c  list.h
src/bridging/plugin/: common.c  common.h  context.h  ly_tree.c  ly_tree.h  types.h
src/bridging/plugin/api/: bridge_netlink.c  bridge_netlink.h  store.c  store.h
src/bridging/plugin/data/: bridge.c  list.c
src/bridging/plugin/data/bridge/: bridge.c  bridge.h  list.c  list.h
src/bridging/plugin/data/component/: component.c  component.h  list.c  list.h
src/bridging/plugin/data/vlan/: list.c  list.h
src/bridging/plugin/startup/: load.c  load.h
src/bridging/plugin/subscription/: change.c  change.h  operational.c  operational.h
src/bridging/subscription/: change.c  change.h  operational.c  operational.h
src/dhcpv6_client/: CMakeLists.txt  dhcpv6_client.c
src/dhcpv6_client/dhcpv6_client_config/: dhcpv6_client_config.c  dhcpv6_client_config.h
src/dhcpv6_client/dhcpv6_client_config/dhcpv6_client_config_file/: dhcpv6_client_config_file.h
src/dhcpv6_client/dhcpv6_client_list/: dhcpv6_client_list.h  dhcpv6_client_list_add.c  dhcpv6_client_list_modify.c  dhcpv6_client_list_remove.c
src/dhcpv6_client/dhcpv6_client_oper/: dhcpv6_client_oper.c  dhcpv6_client_oper.h
src/dhcpv6_client/dhcpv6_client_oper/dhcpv6_client_leases_file/: dhcpv6_client_leases_file.c  dhcpv6_client_leases_file.h
src/dhcpv6_client/dhcpv6_client_sub/: dhcpv6_client_sub.c  dhcpv6_client_sub.h
src/interfaces/: CMakeLists.txt  datastore.c  datastore.h  if_nic_stats.c  if_nic_stats.h  if_state.h  interfaces.c  ip_data.c  ip_data.h  ipv4_data.h  ipv6_data.c  ipv6_data.h  link_data.c  link_data.h
src/interfaces/src/: main.c  plugin.c  plugin.cpp  plugin.h
src/interfaces/src/core/: context.cpp  context.hpp
src/interfaces/src/core/sub/: change.cpp  change.hpp  oper.cpp  oper.hpp  rpc.cpp  rpc.hpp
src/interfaces/src/core/system/: Address.cpp  Address.hpp  ChangeMethods.cpp  IPV4.cpp  IPV4.hpp  IPV4_Address.cpp  IPV4_Address.hpp  IPV6.cpp  IPV6.hpp  Neighbour.cpp  Neighbour.hpp  interface.cpp  interface.hpp
src/interfaces/src/core/yang/: tree.cpp  tree.hpp
src/interfaces/src/modules/: interfaces.cpp  interfaces.hpp
src/interfaces/src/modules/interfaces/: change.cpp  change.hpp  common.hpp  context.hpp  oper.cpp  oper.hpp
src/interfaces/src/modules/interfaces/api/: address.cpp  address.hpp  cache.cpp  cache.hpp  interface.cpp  interface.hpp  neighbor.cpp  neighbor.hpp  nl.cpp  nl.hpp
src/interfaces/src/plugin/: common.c  common.h  context.h  ly_tree.c  ly_tree.h  types.h
src/interfaces/src/plugin/api/interfaces/: change.c  change.h  check.c  check.h  if_data.c  if_data.h  load.c  load.h  read.c  read.h  store.c  store.h
src/interfaces/src/plugin/api/interfaces/interface/: change.c  change.h  load.c  load.h
src/interfaces/src/plugin/api/interfaces/interface/carrier-delay/: change.c  change.h
src/interfaces/src/plugin/api/interfaces/interface/dampening/: change.c  change.h
src/interfaces/src/plugin/api/interfaces/interface/ipv4/: change.c  change.h  load.c  load.h
src/interfaces/src/plugin/api/interfaces/interface/ipv4/address/: change.c  change.h  load.c  load.h
src/interfaces/src/plugin/api/interfaces/interface/ipv4/neighbor/: change.c  change.h  load.c  load.h
src/interfaces/src/plugin/api/interfaces/interface/ipv6/: change.c  change.h  load.c  load.h
src/interfaces/src/plugin/api/interfaces/interface/ipv6/address/: change.c  change.h  load.c  load.h
src/interfaces/src/plugin/data/: if_data.c  interface.c  interface.h
src/interfaces/src/plugin/data/interfaces/: interface.c  interface.h  interface_state.c  interface_state.h
src/interfaces/src/plugin/data/interfaces/interface/: hash.c  hash.h  ipv4.c  ipv4.h  ipv6.c  ipv6.h  linked_list.c  linked_list.h  state.c  state.h  state_hash.c  state_hash.h
src/interfaces/src/plugin/data/interfaces/interface/ipv4/: address.c  address.h  linked_list.c  linked_list.h  neighbor.c  neighbor.h
src/interfaces/src/plugin/data/interfaces/interface/ipv6/: address.c  address.h  linked_list.c  linked_list.h  neighbor.c  neighbor.h
src/interfaces/src/plugin/running/: load.c  load.h  store.c  store.h
src/interfaces/src/plugin/startup/: load.c  load.h  store.c  store.h
src/interfaces/src/plugin/subscription/: change.c  change.h  operational.c  operational.h  rpc.c  rpc.h
src/interfaces/tests/: CMakeLists.txt  interfaces_utest.c
src/routing/: CMakeLists.txt  common.c  common.h  context.h  control_plane_protocol.c  control_plane_protocol.h  main.c  persist.c  persist.h  plugin.cpp  plugin.hpp  rib.c  rib.h  route.c  route.h  routing.c  routing.h  startup.c  startup.h
src/routing/control_plane_protocol/: list.c  list.h
src/routing/core/: context.cpp  context.hpp
src/routing/core/sub/: change.hpp
src/routing/core/yang/: tree.cpp  tree.hpp
src/routing/rib/: description_pair.h  list.c  list.h
src/routing/route/: list.c  list.h  list_hash.c  list_hash.h  next_hop.c  next_hop.h
src/routing/src/: plugin.cpp  plugin.hpp
src/routing/src/core/: context.cpp  context.hpp
src/routing/src/core/sub/: change.cpp  oper.cpp  oper.hpp
src/routing/src/modules/: routing.cpp  routing.hpp
src/routing/src/modules/routing/: change.cpp  change.hpp  common.hpp  context.hpp  oper.cpp  oper.hpp  rpc.cpp  rpc.hpp
src/routing/subscription/: change.c  change.h  operational.c  operational.h  rpc.c  rpc.h
tests/interfaces/: CMakeLists.txt  interfaces_utest.c  manual_tests.md
tests/routing/: CMakeLists.txt  manual_tests.md  routing_utest.c
(+125 files in other folders)
